tooling/nargo_cli/tests/snapshots/execution_success/field_attribute/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: u32) {
    assert(x > foo());
}

#[field(bn254)]
fn foo() -> u32 {
    1
}
